--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,24 @@
+th{
+    position: relative;
+}
+
+th > span{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+th:first-child{
+    width: 300px;
+}
+th:nth-child(3){
+    width: 100px;
+}
+th:nth-child(4){
+    width: 80px;
+}
+
 .page-link:hover {
     cursor: pointer;
 }
